data/all_generated_tests/raw_wast_tests/call_InfiniteLoops_3376.wast
;; 5. **Infinite Loop Triggered by Incorrect Type Checking**:    - **Description**: Construct a program where a loop contains calls with mismatched argument types that are checked incorrectly leading to an attempt to re-evaluate the loop condition.    - **Reason**: This tests the type-checking mechanism's correctness in loops. Mismanagement can trigger re-evaluations, effectively creating an infinite loop.

(assert_invalid
  (module
    (type (func (param i32)))
    (func $loop_fun
      (loop (if (i32.const 1) (call 0 (f32.const 0))))
    )
    (type (func (param f32)))
  )
  "type mismatch"
)